--- a/languages/formidable-ja.po
+++ b/languages/formidable-ja.po
@@ -20,7 +20,7 @@ msgstr ""
 "_x:1,2c;_ex:1,2c;_nx:1,2,4c;_nx_noop:1,2,3c;_n_js:1,2;_nx_js:1,2,3c;"
 "esc_attr__:1;esc_html__:1;esc_attr_e:1;esc_html_e:1;esc_attr_x:1,2c;"
 "esc_html_x:1,2c;comments_number_link:2,3;t:1;st:1;trans:1;transChoice:1,2\n"
-"X-Loco-Target-Locale: ja_JP"
+"X-Loco-Target-Locale: ja"
 
 #. Description of the plugin
 msgid "Quickly and easily create drag-and-drop forms"
